Fonts flickering on refresh fix
- fonts folder moved from src/assets into public/
- Roboto-[Regular, Medium, Bold] links added to index.html for preloading
- all @font-face src url paths updated to /fonts/

--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -7,8 +7,8 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Thin.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Thin.woff') format('woff');
+		url('/fonts/Roboto-Thin.woff2') format('woff2'),
+		url('/fonts/Roboto-Thin.woff') format('woff');
 }
 
 @font-face {
@@ -17,8 +17,8 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Light.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Light.woff') format('woff');
+		url('/fonts/Roboto-Light.woff2') format('woff2'),
+		url('/fonts/Roboto-Light.woff') format('woff');
 }
 
 @font-face {
@@ -27,8 +27,8 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Regular.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Regular.woff') format('woff');
+		url('/fonts/Roboto-Regular.woff2') format('woff2'),
+		url('/fonts/Roboto-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -37,8 +37,8 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Medium.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Medium.woff') format('woff');
+		url('/fonts/Roboto-Medium.woff2') format('woff2'),
+		url('/fonts/Roboto-Medium.woff') format('woff');
 }
 
 @font-face {
@@ -47,8 +47,8 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Bold.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Bold.woff') format('woff');
+		url('/fonts/Roboto-Bold.woff2') format('woff2'),
+		url('/fonts/Roboto-Bold.woff') format('woff');
 }
 
 @font-face {
@@ -57,6 +57,6 @@
 	font-style: normal;
 	font-display: swap;
 	src:
-		url('@/assets/fonts/Roboto-Black.woff2') format('woff2'),
-		url('@/assets/fonts/Roboto-Black.woff') format('woff');
+		url('/fonts/Roboto-Black.woff2') format('woff2'),
+		url('/fonts/Roboto-Black.woff') format('woff');
 }
